Finish user signup

--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -46,6 +46,7 @@ group :development, :test do
   gem 'spork-rails'
   gem 'guard-spork'
   gem 'childprocess'
+  gem 'factory_girl_rails'
 end
 
 # Use ActiveModel has_secure_password
