--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -47,6 +47,8 @@ group :development, :test do
   gem 'guard-spork'
   gem 'childprocess'
   gem 'factory_girl_rails'
+  gem 'cucumber-rails', '1.4.0', :require =>false
+  gem 'database_cleaner', github: 'bmabey/database_cleaner'
 end
 
 # Use ActiveModel has_secure_password
